--- a/pom.xml
+++ b/pom.xml
@@ -155,8 +155,11 @@
 		</dependency>
 
 		
-
-
+		<!-- thymeleaf -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 
 
 
