--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,19 @@
-spring.mvc.view.prefix: /WEB-INF/views/
-spring.mvc.view.suffix: .jsp
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
 
 mybatis.type-aliases-package=com.example.vscapp02.dto
+
+
+# 정적 리소스에 변화가 있을 때 바로 반영한다.
+spring.devtools.livereload.enabled=true
+
+# https://dev-overload.tistory.com/25
+# https://dev-gorany.tistory.com/302
+# thymeleaf 참조 경로 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+# thymeleaf에 대한 캐시를 남기지 않는다. cache=false 설정(운영시는 true)
+spring.thymeleaf.cache=false
+# templates 디렉토리에 파일이 있는지 없는지 체크, 없으면 에러를 발생시킨다.
+spring.thymeleaf.check-template-location=true
