--- a/pom.xml
+++ b/pom.xml
@@ -156,10 +156,10 @@
 
 		
 		<!-- thymeleaf -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
+		</dependency> -->
 
 
 
