--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,12 @@ spring.profiles.active=dev
 #spring.thymeleaf.cache=false
 # templates 디렉토리에 파일이 있는지 없는지 체크, 없으면 에러를 발생시킨다.
 #spring.thymeleaf.check-template-location=true
+
+#파일 업로드 가능 여부를 선택합니다(true)
+spring.servlet.multipart.enabled=true 
+#업로드된 파일의 임시 저장 경로(/Users/YOUNJY/)
+spring.servlet.multipart.location=/file/upload/
+#한 번에 최대 업로드 가능 용량(30MB)
+spring.servlet.multipart.max-request-size=30MB
+#파일 하나의 최대 크기(10MB)
+spring.servlet.multipart.max-file-size=10MB
